--- a/applications/giropops-senhas.yaml
+++ b/applications/giropops-senhas.yaml
@@ -14,6 +14,7 @@ spec:
     namespace: giropops-senhas
     server: 'https://kubernetes.default.svc'
   syncPolicy:
-    automated: {}
+    automated:
+      selfHeal: true # Define que a verdade apenas será o repositorio github (ideal pra ambientes produtivos)
     syncOptions:
     - CreateNamespace=true
