--- a/applications/app-of-apps.yaml
+++ b/applications/app-of-apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: apps-of-apps
+  name: app-of-apps
   namespace: argocd
 spec:
   destination:
