--- a/applications/app-of-apps.yaml
+++ b/applications/app-of-apps.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: app-of-apps
-    repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd.git
+    repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd
     targetRevision: feat/day2
   syncPolicy:
     automated:
