--- a/app-of-apps/templates/giropops-app.yaml
+++ b/app-of-apps/templates/giropops-app.yaml
@@ -1,4 +1,4 @@
-
+{{if .Values.argocd.giropopsSenhas.enabled}}
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
@@ -18,3 +18,4 @@ spec:
       selfHeal: true
     syncOptions:
     - CreateNamespace=true
+{{end}}
