--- a/applications/app-of-apps.yaml
+++ b/applications/app-of-apps.yaml
@@ -13,7 +13,7 @@ spec:
     helm:
       parameters:
       - name: argocd.giropopsSenhas.enabled
-        value: "false"
+        value: "true"
       - name: argocd.randomLogger.enabled
         value: "true"
     repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd
