--- a/app-of-apps/templates/giropops-app.yaml
+++ b/app-of-apps/templates/giropops-app.yaml
@@ -10,6 +10,10 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
+    helm:
+      parameters:
+      - name: "giropopsSenhas.replicas"
+        value: "{{.Values.argocd.giropopsSenhas.replicas}}"
     path: giropops-senhas/helm
     repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd
     targetRevision: feat/day2
