--- a/applicationset/manifests/Applicationset.yaml
+++ b/applicationset/manifests/Applicationset.yaml
@@ -13,11 +13,11 @@ spec:
       directories:
       - path: applicationset/apps/*/helm
       # Caso eu não queira usar um app especifico, eu passo o "exclude: true"
-      - path: applicationset/apps/random-logger/helm
-        exclude: true
+      # - path: applicationset/apps/random-logger/helm
+      #   exclude: true
   template:
     metadata:
-      name: '{{index .path.segments 3}}'
+      name: '{{index .path.segments 2}}'
     spec:
       project: "default"
       source:
@@ -26,7 +26,7 @@ spec:
         path: '{{.path.path}}'
       destination:
         server: https://kubernetes.default.svc
-        namespace: '{{index .path.segments 3}}'
+        namespace: '{{index .path.segments 2}}'
       syncPolicy:
         automated: {}
         syncOptions:
