--- a/applicationset/manifests/Applicationset.yaml
+++ b/applicationset/manifests/Applicationset.yaml
@@ -7,25 +7,17 @@ spec:
   goTemplate: true
   goTemplateOptions: [ "missingkey=error" ]
   generators:
-  - matrix:
-    - git:
-        repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd.git
-        revision: feat/day3
-        directories:
-        - path: applicationset/apps/*/helm
-        # Caso eu não queira usar um app especifico, eu passo o "exclude: true"
-        # - path: applicationset/apps/random-logger/helm
-        #   exclude: true
-    - git:
-        repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd.git
-        revision: feat/day3
-        pathParamPrefix: cfg
-        files:
-        - path: applicationset/configs/dev.json
-
+  - git:
+      repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd.git
+      revision: feat/day3
+      directories:
+      - path: applicationset/apps/*/helm
+      # Caso eu não queira usar um app especifico, eu passo o "exclude: true"
+      # - path: applicationset/apps/random-logger/helm
+      #   exclude: true
   template:
     metadata:
-      name: '{{index .path.segments 2}}-{{.cluster.name}}'
+      name: '{{index .path.segments 2}}'
     spec:
       project: "default"
       source:
