fix: enabled for apps

--- a/applicationset/manifests/ApplicationsetPullRequest.yaml
+++ b/applicationset/manifests/ApplicationsetPullRequest.yaml
@@ -22,6 +22,12 @@ spec:
         repoURL: https://github.com/stenioignacio/descomplicando-gitops-no-kubernetes-com-argocd.git
         targetRevision: '{{head_sha}}'
         path: app-of-apps/
+        helm:
+          parameters:
+          - name: argocd.giropopsSenhas.enabled
+            value: "true"
+          - name: argocd.randomLogger.enabled
+            value: "true"
       destination:
         server: https://kubernetes.default.svc
         namespace: app-of-apps-{{branch_slug}}-{{number}}
